--- a/educa/students/templates/students/course/detail.html
+++ b/educa/students/templates/students/course/detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load cache %}
 
 {% block title %}
 {{ object.title }}
@@ -24,11 +25,14 @@
     </ul>
 </div>
 <div class="module">
-    {% for content in module.contents.all %}
-        {% with item=content.item %}
-            <h2>{{ item.title }}</h2>
-            {{ item.render }}
-        {% endwith %}
-    {% endfor %}
+    <!-- This fragment with the name 'module_content' will be caching for each module -->
+    {% cache 600 module_contents module %}
+        {% for content in module.contents.all %}
+            {% with item=content.item %}
+                <h2>{{ item.title }}</h2>
+                {{ item.render }}
+            {% endwith %}
+        {% endfor %}
+    {% endcache %}
 </div>
 {% endblock %}
